@@ -116,6 +116,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #4998: The memory saving effect of __slots__ had been lost on Fractions
+  which inherited from numbers.py which did not have __slots__ defined.  The
+  numbers hierarchy now has its own __slots__ declarations.
+
 - Issue #4631: Fix urlopen() result when an HTTP response uses chunked
   encoding.
 
